Update testimonials images with width optimization

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -314,7 +314,7 @@
       },
       "q4": {
         "question": "Do you offer refunds?",
-        "answer": "We offer a 14-day money-back guarantee on all paid plans. If you're not satisfied within the first two weeks, we'll refund your payment in full."
+        "answer": "We offer a 7-day money-back guarantee on all paid plans. If you're not satisfied within the first 7 days, we'll refund your payment in full."
       },
       "q5": {
         "question": "Can I upgrade or downgrade my plan?",
@@ -638,7 +638,8 @@
     "usePrompt": "Use this prompt",
     "improvementDescription": "Once you have your basic automation tool, you can enhance it with these additional features",
     "buildPrompt": "Just enter your idea into the text box and AI will build it for you",
-    "askAiToBuild": "Ask AI to build"
+    "askAiToBuild": "Ask AI to build",
+    "englishFallback": "This content is currently available in English only. We're working on translating it to your language."
   },
   "inspiration": {
     "badge": "Inspiration",
@@ -672,6 +673,7 @@
     "title": "Ready to Build Your App?",
     "description": "Join thousands of creators who are bringing their ideas to life with Kliv. Start building today — no credit card required.",
     "getStarted": "Get Started Free",
+    "goToPortal": "Go to Portal",
     "learnMore": "Explore Features"
   },
   "testimonials": {
