--- a/src/i18n/locales/ja.json
+++ b/src/i18n/locales/ja.json
@@ -56,6 +56,7 @@
     }
   },
   "howItWorks": {
+    "badge": "シンプルなプロセス",
     "title": "Klivの仕組み",
     "subtitle": "4つの簡単なステップでアイデアを現実に",
     "step1": {
@@ -313,7 +314,7 @@
       },
       "q4": {
         "question": "返金はありますか？",
-        "answer": "すべての有料プランで14日間の返金保証を提供しています。最初の2週間以内にご満足いただけない場合は、全額返金いたします。"
+        "answer": "すべての有料プランで7日間の返金保証を提供しています。最初の7日以内にご満足いただけない場合は、全額返金いたします。"
       },
       "q5": {
         "question": "プランをアップグレードまたはダウングレードできますか？",
@@ -637,7 +638,8 @@
     "usePrompt": "このプロンプトを使用",
     "improvementDescription": "基本的な自動化ツールができたら、これらの追加機能で強化できます",
     "buildPrompt": "テキストボックスにアイデアを入力するだけで、AIが構築します",
-    "askAiToBuild": "AIに構築を依頼"
+    "askAiToBuild": "AIに構築を依頼",
+    "englishFallback": "このコンテンツは現在英語のみで利用可能です。あなたの言語への翻訳に取り組んでいます。"
   },
   "inspiration": {
     "badge": "インスピレーション",
@@ -671,6 +673,7 @@
     "title": "アプリを作る準備はできましたか？",
     "description": "Klivでアイデアを実現している何千人ものクリエイターに参加しましょう。今日から構築を開始 — クレジットカード不要。",
     "getStarted": "無料で始める",
+    "goToPortal": "ポータルへ移動",
     "learnMore": "機能を見る"
   },
   "testimonials": {
