--- a/src/i18n/locales/sv.json
+++ b/src/i18n/locales/sv.json
@@ -314,7 +314,7 @@
       },
       "q4": {
         "question": "Erbjuder ni återbetalning?",
-        "answer": "Vi erbjuder 14 dagars pengarna-tillbaka-garanti på alla betalda planer. Om du inte är nöjd inom de första två veckorna återbetalar vi din betalning i sin helhet."
+        "answer": "Vi erbjuder 7 dagars pengarna-tillbaka-garanti på alla betalda planer. Om du inte är nöjd inom de första 7 dagarna återbetalar vi din betalning i sin helhet."
       },
       "q5": {
         "question": "Kan jag uppgradera eller nedgradera min plan?",
@@ -638,7 +638,8 @@
     "usePrompt": "Använd denna prompt",
     "improvementDescription": "När du har ditt grundläggande automatiseringsverktyg kan du förbättra det med dessa ytterligare funktioner",
     "buildPrompt": "Ange bara din idé i textrutan så bygger AI den åt dig",
-    "askAiToBuild": "Be AI att bygga"
+    "askAiToBuild": "Be AI att bygga",
+    "englishFallback": "Detta innehåll är för närvarande endast tillgängligt på engelska. Vi arbetar med att översätta det till ditt språk."
   },
   "inspiration": {
     "badge": "Inspiration",
@@ -672,6 +673,7 @@
     "title": "Redo att bygga din app?",
     "description": "Gå med tusentals skapare som förverkligar sina idéer med Kliv. Börja bygga idag — inget kreditkort krävs.",
     "getStarted": "Kom igång gratis",
+    "goToPortal": "Gå till portal",
     "learnMore": "Utforska funktioner"
   },
   "testimonials": {
