Refactor Contact page layout and update header styling

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -817,5 +817,37 @@
       "paragraph3": "For inquiries about investing in Kliv, please contact us at",
       "paragraph3Suffix": "."
     }
+  },
+  "contact": {
+    "badge": "Get in Touch",
+    "title": "Contact Us",
+    "subtitle": "Have questions, feedback, or need help? We'd love to hear from you. Send us a message and we'll get back to you as soon as possible.",
+    "formTitle": "Send us a message",
+    "nameLabel": "Name",
+    "namePlaceholder": "Your name",
+    "emailLabel": "Email",
+    "emailPlaceholder": "your@email.com",
+    "subjectLabel": "Subject",
+    "subjectPlaceholder": "What is this about?",
+    "messageLabel": "Message",
+    "messagePlaceholder": "Tell us more about what you need help with...",
+    "validation": {
+      "missingFields": "Missing information",
+      "pleaseFillOutAll": "Please fill out all fields."
+    },
+    "submit": {
+      "sending": "Sending...",
+      "sendMessage": "Send Message"
+    },
+    "success": {
+      "title": "Message sent!",
+      "description": "We'll get back to you as soon as possible."
+    },
+    "error": {
+      "title": "Something went wrong",
+      "description": "Please try again or email us directly at hello@kliv.dev"
+    },
+    "alternativeContact": "Or email us directly at",
+    "required": "*"  
   }
 }
