Add contact form translations for Swedish and Japanese languages

--- a/src/i18n/locales/ja.json
+++ b/src/i18n/locales/ja.json
@@ -817,5 +817,37 @@
       "paragraph3": "Klivへの投資に関するお問い合わせは、",
       "paragraph3Suffix": "までご連絡ください。"
     }
+  },
+  "contact": {
+    "badge": "お問い合わせ",
+    "title": "お問い合わせ",
+    "subtitle": "ご質問、フィードバック、またはヘルプが必要ですか？ぜひお聞かせください。メッセージをお送りいただければ、できるだけ早くご返信いたします。",
+    "formTitle": "メッセージを送信",
+    "nameLabel": "お名前",
+    "namePlaceholder": "お名前",
+    "emailLabel": "メールアドレス",
+    "emailPlaceholder": "your@email.com",
+    "subjectLabel": "件名",
+    "subjectPlaceholder": "この件について教えてください",
+    "messageLabel": "メッセージ",
+    "messagePlaceholder": "どのようなお手伝いが必要か詳細をお聞かせください...",
+    "validation": {
+      "missingFields": "情報が不足しています",
+      "pleaseFillOutAll": "すべてのフィールドをご記入ください。"
+    },
+    "submit": {
+      "sending": "送信中...",
+      "sendMessage": "メッセージを送信"
+    },
+    "success": {
+      "title": "メッセージが送信されました！",
+      "description": "できるだけ早くご返信いたします。"
+    },
+    "error": {
+      "title": "問題が発生しました",
+      "description": "再度お試しいただくか、hello@kliv.devまで直接メールをお送りください"
+    },
+    "alternativeContact": "または直接こちらまでメールをお送りください",
+    "required": "*"
   }
 }
