--- a/src/i18n/locales/sv.json
+++ b/src/i18n/locales/sv.json
@@ -817,5 +817,37 @@
       "paragraph3": "För förfrågningar om att investera i Kliv, vänligen kontakta oss på",
       "paragraph3Suffix": "."
     }
+  },
+  "contact": {
+    "badge": "Kontakta oss",
+    "title": "Kontakt",
+    "subtitle": "Har du frågor, feedback eller behöver hjälp? Vi skulle älska att höra från dig. Skicka ett meddelande till oss så återkommer vi så snart som möjligt.",
+    "formTitle": "Skicka ett meddelande",
+    "nameLabel": "Namn",
+    "namePlaceholder": "Ditt namn",
+    "emailLabel": "E-post",
+    "emailPlaceholder": "din@epost.se",
+    "subjectLabel": "Ämne",
+    "subjectPlaceholder": "Vad gäller detta?",
+    "messageLabel": "Meddelande",
+    "messagePlaceholder": "Berätta mer om vad du behöver hjälp med...",
+    "validation": {
+      "missingFields": "Information saknas",
+      "pleaseFillOutAll": "Vänligen fyll i alla fält."
+    },
+    "submit": {
+      "sending": "Skickar...",
+      "sendMessage": "Skicka meddelande"
+    },
+    "success": {
+      "title": "Meddelandet skickat!",
+      "description": "Vi återkommer så snart som möjligt."
+    },
+    "error": {
+      "title": "Något gick fel",
+      "description": "Vänligen försök igen eller skicka ett mejl till oss direkt på hello@kliv.dev"
+    },
+    "alternativeContact": "Eller skicka ett mejl till oss direkt på",
+    "required": "*"
   }
 }
