Update press contact details and add direct email options for inquiries

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -716,7 +716,8 @@
     "title": "Press & Media",
     "subtitle": "News, resources, and information for journalists and media professionals covering Kliv.",
     "contact": {
-      "label": "Press inquiries"
+      "label": "Press inquiries",
+      "alternativeLabel": "Email us directly"
     },
     "facts": {
       "title": "Company Facts",
@@ -747,7 +748,8 @@
     },
     "contactSection": {
       "title": "Media Inquiries",
-      "description": "For press inquiries, interviews, or additional information about Kliv, please contact our press team. We typically respond within 24 hours."
+      "description": "For press inquiries, interviews, or additional information about Kliv, please contact our press team. We typically respond within 24 hours.",
+      "emailInfo": "You can also email us directly at press@kliv.dev for press inquiries."
     }
   },
   "aboutPage": {
