--- a/src/i18n/locales/ja.json
+++ b/src/i18n/locales/ja.json
@@ -716,7 +716,8 @@
     "title": "プレス＆メディア",
     "subtitle": "Klivを取材するジャーナリストやメディア専門家向けのニュース、リソース、情報。",
     "contact": {
-      "label": "プレスのお問い合わせ"
+      "label": "プレスのお問い合わせ",
+      "alternativeLabel": "直接メールでお問い合わせ"
     },
     "facts": {
       "title": "企業情報",
@@ -747,7 +748,8 @@
     },
     "contactSection": {
       "title": "メディアお問い合わせ",
-      "description": "プレスのお問い合わせ、インタビュー、またはKlivに関する追加情報については、プレスチームにご連絡ください。通常24時間以内に返信いたします。"
+      "description": "プレスのお問い合わせ、インタビュー、またはKlivに関する追加情報については、プレスチームにご連絡ください。通常24時間以内に返信いたします。",
+      "emailInfo": "プレスのお問い合わせについては、press@kliv.dev まで直接メールでお問い合わせいただくこともできます。"
     }
   },
   "aboutPage": {
