--- a/src/i18n/locales/sv.json
+++ b/src/i18n/locales/sv.json
@@ -716,7 +716,8 @@
     "title": "Press & Media",
     "subtitle": "Nyheter, resurser och information för journalister och medieprofessionella som skriver om Kliv.",
     "contact": {
-      "label": "Pressförfrågningar"
+      "label": "Pressförfrågningar",
+      "alternativeLabel": "Mejla oss direkt"
     },
     "facts": {
       "title": "Företagsfakta",
@@ -747,7 +748,8 @@
     },
     "contactSection": {
       "title": "Mediaförfrågningar",
-      "description": "För pressförfrågningar, intervjuer eller ytterligare information om Kliv, vänligen kontakta vårt pressteam. Vi svarar vanligtvis inom 24 timmar."
+      "description": "För pressförfrågningar, intervjuer eller ytterligare information om Kliv, vänligen kontakta vårt pressteam. Vi svarar vanligtvis inom 24 timmar.",
+      "emailInfo": "Du kan också mejla oss direkt på press@kliv.dev för pressförfrågningar."
     }
   },
   "aboutPage": {
