Update contact information in About page and localization files

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -816,8 +816,10 @@
       "paragraph2": "Our current investor is",
       "paragraph2Suffix": ", a venture capital firm focused on backing innovative technology companies.",
       "rationalVentures": "Rational Ventures",
-      "paragraph3": "For inquiries about investing in Kliv, please contact us at",
-      "paragraph3Suffix": "."
+      "paragraph3": "For inquiries about investing in Kliv, please contact us",
+      "paragraph3Suffix": ".",
+      "contactForm": "through our contact form",
+      "emailDirectly": "Or email us directly at"
     }
   },
   "contact": {
