--- a/src/i18n/locales/ja.json
+++ b/src/i18n/locales/ja.json
@@ -817,7 +817,9 @@
       "paragraph2Suffix": "です。革新的なテクノロジー企業への投資に焦点を当てたベンチャーキャピタルファームです。",
       "rationalVentures": "Rational Ventures",
       "paragraph3": "Klivへの投資に関するお問い合わせは、",
-      "paragraph3Suffix": "までご連絡ください。"
+      "paragraph3Suffix": "までご連絡ください。",
+      "contactForm": "お問い合わせフォームから",
+      "emailDirectly": "または直接こちらまでメールをお送りください"
     }
   },
   "contact": {
