--- a/src/i18n/locales/sv.json
+++ b/src/i18n/locales/sv.json
@@ -816,8 +816,10 @@
       "paragraph2": "Vår nuvarande investerare är",
       "paragraph2Suffix": ", ett riskkapitalbolag som fokuserar på att stödja innovativa teknikföretag.",
       "rationalVentures": "Rational Ventures",
-      "paragraph3": "För förfrågningar om att investera i Kliv, vänligen kontakta oss på",
-      "paragraph3Suffix": "."
+      "paragraph3": "För förfrågningar om att investera i Kliv, vänligen kontakta oss",
+      "paragraph3Suffix": ".",
+      "contactForm": "genom vårt kontaktformulär",
+      "emailDirectly": "Eller mejla oss direkt på"
     }
   },
   "contact": {
