Update investor information and localization for About page

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -812,14 +812,15 @@
     },
     "investors": {
       "title": "Investors",
-      "paragraph1": "Kliv is backed by leading investors who share our vision of democratizing software development through AI.",
-      "paragraph2": "Our current investor is",
-      "paragraph2Suffix": ", a venture capital firm focused on backing innovative technology companies.",
+      "subtitle": "Backed by leading investors who share our vision of democratizing software development through AI.",
       "rationalVentures": "Rational Ventures",
-      "paragraph3": "For inquiries about investing in Kliv, please contact us",
-      "paragraph3Suffix": ".",
-      "contactForm": "through our contact form",
-      "emailDirectly": "Or email us directly at"
+      "investorDescription": "A venture capital firm focused on backing transformative technology companies that are reshaping how software is built and deployed.",
+      "investmentInquiry": {
+        "title": "Interested in Investing?",
+        "description": "We're building the future of AI-powered development. If you're interested in joining us on this journey, we'd love to hear from you.",
+        "contactButton": "Contact Our Team",
+        "or": "or"
+      }
     }
   },
   "contact": {
