--- a/src/i18n/locales/ja.json
+++ b/src/i18n/locales/ja.json
@@ -812,14 +812,15 @@
     },
     "investors": {
       "title": "投資家",
-      "paragraph1": "Klivは、AIを通じてソフトウェア開発の民主化という私たちのビジョンを共有する主要な投資家から支援を受けています。",
-      "paragraph2": "現在の投資家は",
-      "paragraph2Suffix": "です。革新的なテクノロジー企業への投資に焦点を当てたベンチャーキャピタルファームです。",
+      "subtitle": "AIを通じてソフトウェア開発の民主化という私たちのビジョンを共有する主要な投資家から支援を受けています。",
       "rationalVentures": "Rational Ventures",
-      "paragraph3": "Klivへの投資に関するお問い合わせは、",
-      "paragraph3Suffix": "までご連絡ください。",
-      "contactForm": "お問い合わせフォームから",
-      "emailDirectly": "または直接こちらまでメールをお送りください"
+      "investorDescription": "ソフトウェアの構築と展開方法を再構築する変革的なテクノロジー企業への投資に焦点を当てたベンチャーキャピタルファームです。",
+      "investmentInquiry": {
+        "title": "投資にご興味をお持ちですか？",
+        "description": "私たちはAI駆動開発の未来を構築しています。この旅に参加することにご興味がある場合は、ぜひお聞かせください。",
+        "contactButton": "チームに連絡する",
+        "or": "または"
+      }
     }
   },
   "contact": {
