--- a/src/i18n/locales/sv.json
+++ b/src/i18n/locales/sv.json
@@ -812,14 +812,15 @@
     },
     "investors": {
       "title": "Investerare",
-      "paragraph1": "Kliv stöds av ledande investerare som delar vår vision om att demokratisera mjukvaruutveckling genom AI.",
-      "paragraph2": "Vår nuvarande investerare är",
-      "paragraph2Suffix": ", ett riskkapitalbolag som fokuserar på att stödja innovativa teknikföretag.",
+      "subtitle": "Stöds av ledande investerare som delar vår vision om att demokratisera mjukvaruutveckling genom AI.",
       "rationalVentures": "Rational Ventures",
-      "paragraph3": "För förfrågningar om att investera i Kliv, vänligen kontakta oss",
-      "paragraph3Suffix": ".",
-      "contactForm": "genom vårt kontaktformulär",
-      "emailDirectly": "Eller mejla oss direkt på"
+      "investorDescription": "Ett riskkapitalbolag som fokuserar på att stödja transformativa teknikföretag som omformar hur programvara byggs och distribueras.",
+      "investmentInquiry": {
+        "title": "Intresserad av att investera?",
+        "description": "Vi bygger framtiden för AI-driven utveckling. Om du är intresserad av att gå med oss på denna resa, skulle vi älska att höra från dig.",
+        "contactButton": "Kontakta vårt team",
+        "or": "eller"
+      }
     }
   },
   "contact": {
