Update HeroSection to render HTML in title and localize changes

--- a/src/i18n/locales/ja.json
+++ b/src/i18n/locales/ja.json
@@ -13,7 +13,7 @@
     "portalButton": "ポータルへ"
   },
   "hero": {
-    "title": "ボックスに入力して任意のウェブサイトやアプリを作成",
+    "title": "ボックスに入力して<br/>任意のウェブサイトやアプリを作成",
     "subtitle": "あなたのアイデアを説明すると、Klivが数分で完全に機能するアプリケーションやウェブサイトを作成します。コーディングは不要です。",
     "placeholder": "構築したいアプリやウェブサイトを説明してください...",
     "typingExamples": [
