追加のブランド資料とロゴダウンロード機能を実装

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -750,6 +750,70 @@
       "title": "Media Inquiries",
       "description": "For press inquiries, interviews, or additional information about Kliv, please contact our press team. We typically respond within 24 hours.",
       "emailInfo": "You can also email us directly at press@kliv.dev for press inquiries."
+    },
+    "brandAssets": {
+      "badge": "Media Kit",
+      "title": "Brand Assets",
+      "subtitle": "Download our logos and brand materials for editorial use",
+      "logoDownloads": {
+        "title": "Logo Downloads",
+        "assets": {
+          "transparentPng": {
+            "name": "Logo (Transparent PNG)",
+            "description": "Standard resolution for web use"
+          },
+          "transparentPng300": {
+            "name": "Logo (Transparent PNG 300dpi)",
+            "description": "High resolution for print materials"
+          },
+          "whitePng": {
+            "name": "Logo (White PNG)",
+            "description": "For use on dark backgrounds"
+          },
+          "whitePng300": {
+            "name": "Logo (White PNG 300dpi)",
+            "description": "High resolution white logo for print"
+          },
+          "svg": {
+            "name": "Logo (Vector SVG)",
+            "description": "Scalable vector format for web and professional design"
+          },
+          "eps": {
+            "name": "Logo (Vector EPS)",
+            "description": "Scalable vector format for professional design"
+          },
+          "pdf": {
+            "name": "Logo (PDF)",
+            "description": "Universal format, suitable for most uses"
+          }
+        },
+        "download": "Download"
+      },
+      "colors": {
+        "title": "Brand Colors",
+        "primaryBlue": {
+          "name": "Primary Blue",
+          "usage": "Primary brand color, CTAs, links, highlights"
+        },
+        "accentOrange": {
+          "name": "Accent Orange",
+          "usage": "Secondary accent, gradients, emphasis"
+        }
+      },
+      "typography": {
+        "title": "Typography",
+        "primaryFont": "Primary Font",
+        "primaryFontValue": "Geist (sans-serif)",
+        "brandName": "Brand Name",
+        "brandNameValue": "Always capitalize: \"Kliv\" (not \"kliv\" or \"KLIV\")"
+      },
+      "guidelines": {
+        "title": "Usage Guidelines",
+        "clearSpace": "Use logos with adequate clear space",
+        "proportions": "Maintain original proportions",
+        "whiteLogo": "Use white logo on dark backgrounds",
+        "contrast": "Ensure sufficient contrast"
+      }
     }
   },
   "aboutPage": {
