--- a/src/i18n/locales/sv.json
+++ b/src/i18n/locales/sv.json
@@ -750,6 +750,70 @@
       "title": "Mediaförfrågningar",
       "description": "För pressförfrågningar, intervjuer eller ytterligare information om Kliv, vänligen kontakta vårt pressteam. Vi svarar vanligtvis inom 24 timmar.",
       "emailInfo": "Du kan också mejla oss direkt på press@kliv.dev för pressförfrågningar."
+    },
+    "brandAssets": {
+      "badge": "Mediakit",
+      "title": "Varumärkestillgångar",
+      "subtitle": "Ladda ner våra logotyper och varumärkesmaterial för redaktionellt bruk",
+      "logoDownloads": {
+        "title": "Logotypnedladdningar",
+        "assets": {
+          "transparentPng": {
+            "name": "Logotyp (Transparent PNG)",
+            "description": "Standardupplösning för webbanvändning"
+          },
+          "transparentPng300": {
+            "name": "Logotyp (Transparent PNG 300dpi)",
+            "description": "Högupplöst för tryckt material"
+          },
+          "whitePng": {
+            "name": "Logotyp (Vit PNG)",
+            "description": "För användning på mörka bakgrunder"
+          },
+          "whitePng300": {
+            "name": "Logotyp (Vit PNG 300dpi)",
+            "description": "Högupplöst vit logotyp för tryck"
+          },
+          "svg": {
+            "name": "Logotyp (Vektor SVG)",
+            "description": "Skalbart vektorformat för webb och professionell design"
+          },
+          "eps": {
+            "name": "Logotyp (Vektor EPS)",
+            "description": "Skalbart vektorformat för professionell design"
+          },
+          "pdf": {
+            "name": "Logotyp (PDF)",
+            "description": "Universellt format, lämpligt för de flesta användningsområden"
+          }
+        },
+        "download": "Ladda ner"
+      },
+      "colors": {
+        "title": "Varumärkesfärger",
+        "primaryBlue": {
+          "name": "Primär Blå",
+          "usage": "Primär varumärkesfärg, CTA:er, länkar, markeringar"
+        },
+        "accentOrange": {
+          "name": "Accent Orange",
+          "usage": "Sekundär accent, gradienter, betoning"
+        }
+      },
+      "typography": {
+        "title": "Typografi",
+        "primaryFont": "Primärt typsnitt",
+        "primaryFontValue": "Geist (sans-serif)",
+        "brandName": "Varumärkesnamn",
+        "brandNameValue": "Använd alltid stor begynnelsebokstav: \"Kliv\" (inte \"kliv\" eller \"KLIV\")"
+      },
+      "guidelines": {
+        "title": "Användningsriktlinjer",
+        "clearSpace": "Använd logotyper med tillräckligt fritt utrymme",
+        "proportions": "Behåll originalproportioner",
+        "whiteLogo": "Använd vit logotyp på mörka bakgrunder",
+        "contrast": "Säkerställ tillräcklig kontrast"
+      }
     }
   },
   "aboutPage": {
