Update Japanese localization for responsiveness description

--- a/src/i18n/locales/ja.json
+++ b/src/i18n/locales/ja.json
@@ -136,7 +136,7 @@
         },
         "responsive": {
           "title": "レスポンシブデザイン",
-          "description": "すべてのアプリはモバイルファーストのレスポンシブデザイン原則で構築され、すべてのデバイスと画面サイズに対応します。"
+          "description": "すべてのアプリはモバイルファーストのレスポンシブデザイン原則で構築され、すべてのデバイスと画面サイズをサポートします。"
         }
       },
       "development": {
