Update Japanese locale text for responsive design description

--- a/src/i18n/locales/ja.json
+++ b/src/i18n/locales/ja.json
@@ -136,7 +136,7 @@
         },
         "responsive": {
           "title": "レスポンシブデザイン",
-          "description": "すべてのアプリはモバイルファーストのレスポンシブデザイン原則で構築され、すべてのデバイスと画面サイズをサポートします。"
+          "description": "アプリはスマートフォンやタブレットなど、さまざまな画面サイズで使いやすいレイアウトになるよう設計されています。"
         }
       },
       "development": {
