Update Japanese locale for responsive design description

--- a/src/i18n/locales/ja.json
+++ b/src/i18n/locales/ja.json
@@ -136,7 +136,7 @@
         },
         "responsive": {
           "title": "レスポンシブデザイン",
-          "description": "アプリはスマートフォンやタブレットなど、さまざまな画面サイズで使いやすいレイアウトになるよう設計されています。"
+          "description": "多くのデバイスで利用しやすいレイアウトになるよう、自動的に調整を行います。"
         }
       },
       "development": {
